--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: ruby
 
 rvm:
   - 2.0.0
-  - 2.1.7
-  - 2.2.3
+  - 2.1.8
+  - 2.2.4
+  - 2.3.0
 
 before_install: gem install bundler
 
 sudo: false
+
+cache: bundler
